--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "type": "git",
     "url": "https://github.com/gadget-inc/babel-plugin-react-displayname.git"
   },
-  "homepage": "https://github.com/gadget-inc/babel-plugin-react-displayname#readme"
+  "homepage": "https://github.com/gadget-inc/babel-plugin-react-displayname#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/gadget-inc"
+  }
 }
